--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -3,48 +3,45 @@
 {% set correct = 0 %}
 
 {% block body %}
-    <div class="grey-background">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    {% if current.contributors.count > 0 %}
-                        <p>Contributors:</p>
-                        {% for contributor in current.contributors %}
-                            <img src="{{ contributor.avatar }}" title="{{ contributor.name ~ ' ' ~ contributor.surname }}">
-                        {% endfor %}
+    <div id="headerwrap">
+        <div class="container ">
+            {% for group in app.session.get('questionGroups') %}
+                {% if not group[0].book.title %}
+                    <b><h1>Results</h1></b>
+                {% else %}
+                    <b><h1>{{ loop.index }}.{{ group[0].book.title }}</h1></b><br>
+                {% endif %}
+                {% for question in group %}
+                    {% if app.session.get('isCorrect')[question.id]  %}
+                        {% set correct = correct + 1 %}
+                        <a class="dd66 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
+                    {% else %}
+                        <a class="dd77 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
                     {% endif %}
-                </div>
-                <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
-                    {% for group in app.session.get('questionGroups') %}
-                        {% if not group[0].book.title %}
-                            <b><h3>{{ loop.index ~ '. PHP Test' }}</h3></b>
-                        {% else %}
-                            <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
-                        {% endif %}
-                            {% for question in group %}
-                                {% if app.session.get('isCorrect')[question.id]  %}
-                                    {% set correct = correct + 1 %}
-                                    <a class="dd66 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                                {% else %}
-                                    <a class="dd77 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                                {% endif %}
-                            {% endfor %}<br>
-                        {% endfor %}
-
-                    <div class="alert alert-info ">
-                        <h3>
+                {% endfor %}<br>
+            {% endfor %}
+            <div class="row alert">
+                <div class="col-lg-12">
+                    <div class="">
+                        <h3 class="black-text">
                             You've scored {{ correct ~ '/' ~ app.session.get('isCorrect')|length }}
                         </h3>
                     </div>
 
                     {% if solved %}
-                    <div class="alert alert-warning">
+                    <div class="">
                         <h4>
                             You've used the "Solve it" option on this question.
                         </h4>
                     </div>
                     {% endif %}
-                    <input type="button" id="reportBtn" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#questionReport" value="Invalid question">
+
+                    {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
+                        <p><b>Your choice was incorrect.</b></p>
+                    {% else %}
+                        <p><b>Your choice was correct!</b></p>
+                    {% endif %}
+
                     {{ form_start(form) }}
                     {{ index ~ '.'}}{{ current.content|replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
                     "</pre>" : "</xmp></code></pre>" })|raw }}
@@ -89,22 +86,26 @@
                         {% endif %}
                     {% endfor %}
 
-                    <div class="allignCenter">
+                    <div class="">
                         {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }} &nbsp;
                         {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
                     </div>
                     {{ form_end(form) }}
-
-                    {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
-                        <p>Your choice is incorrect.</p>
-                    {% else %}
-                        <p>Your choice is correct!</p>
-                    {% endif %}
-                    <div class="visible">
-                        {{ current.explanation|
-                        replace({ "<pre>" : "<pre><code class='language-php'><xmp>" , "</pre>" : "</xmp></code></pre>" })|raw }}
-                    </div>
                 </div>
+            </div>
+            <div class="row alert">
+                <div class="visible">
+                    {{ current.explanation|
+                    replace({ "<pre>" : "<pre><code class='language-php'><xmp>" , "</pre>" : "</xmp></code></pre>" })|raw }}
+                </div>
+                <hr>
+                {% if current.contributors.count > 0 %}
+                    <p>Contributors:</p>
+                    {% for contributor in current.contributors %}
+                        <img src="{{ contributor.avatar }}" title="{{ contributor.name ~ ' ' ~ contributor.surname }}">
+                    {% endfor %}
+                {% endif %}
+                <input type="button" id="reportBtn" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#questionReport" value="Report question">
             </div>
         </div>
     </div>
