styled some templates

--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -64,6 +64,7 @@ body {
 
 .white-text{
   color: white;
+  border-color: white;
 }
 
 .dark-text{
@@ -241,4 +242,41 @@ a:hover{
 
 .leaderboard-thumb {
   height: 50px;
+}
+
+.blue-bg {
+  background-color: #3498db;
+}
+
+.data-row {
+  background-color: #3498db;
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+}
+
+.info {
+  color: white;
+  font-size: 20px;
+}
+
+#leaderboard_length > label:nth-child(1) > select:nth-child(1) {
+  color: #222;
+}
+
+#leaderboard_length > label:nth-child(1), #leaderboard_info, #leaderboard_previous, #leaderboard_next {
+  color: white !important;
+  font-size: 20px;
+}
+
+.answer {
+  margin-bottom: 10px;
+}
+
+#answers {
+  display: inline;
+}
+
+@media all {
+
 }
