--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -200,23 +200,28 @@ body {
 }
 
 .dd66{
-  color: white;
-  font-size: 20px;
+  color: black;
 }
 
 .dd77{
   color: red;
-  font-size: 20px;
+}
+
+.dd88{
+  color: green;
 }
 
 .color-background-text{
-  color: black;
+  font-size: 25px;
+  font-family: "Times New Roman";
   display: inline-block;
-  padding: 10px;
-  margin: 0 0 10px;
+  padding: 5px;
+  border-radius: 2px;
+  border-color: inherit;
 }
-.color-background-text:hover{
-  background-color: white;
+.color-background-text:hover {
+  color: inherit;
+  border-color: black;
 }
 
 .margin-0{
@@ -241,11 +246,14 @@ a:hover{
 }
 
 #countdown p {
-  color: black;
+  font-size: 25px;
+  font-family: "Times New Roman";
   display: inline-block;
+  color: black;
   padding: 5px;
-  background: white;
-  margin: 0 0 20px;
+  background: #E0BE23;
+  margin: 0 0 5px;
+  margin-top: 10px;
 }
 
 label{
@@ -261,7 +269,7 @@ label{
 }
 
 .yellow{
-  color: #ffff00;
+  color: #E0BE23;
 }
 
 .blue-new{
@@ -279,10 +287,10 @@ label{
 
 }
 
-.row{
-  margin-left: 0;
-  margin-right: 0;
+.paddin-0{
+  padding: 0;
 }
+
 .blue-bg {
   background-color: #3498db;
 }
@@ -314,4 +322,8 @@ label{
 
 #answers {
   display: inline;
+}
+
+.img-circle {
+  border-radius: 50%;
 }
