--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -5,21 +5,39 @@
 {% block body %}
     <div id="headerwrap">
         <div class="container ">
-            {% for group in app.session.get('questionGroups') %}
-                {% if not group[0].book.title %}
-                    <b><h1>Results</h1></b>
-                {% else %}
-                    <b><h1>{{ loop.index }}.{{ group[0].book.title }}</h1></b><br>
-                {% endif %}
-                {% for question in group %}
-                    {% if app.session.get('isCorrect')[question.id]  %}
-                        {% set correct = correct + 1 %}
-                        <a class="dd66 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                    {% else %}
-                        <a class="dd77 color-background-text" title="{{ question.title }}" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a>
-                    {% endif %}
-                {% endfor %}<br>
-            {% endfor %}
+            <div class="row">
+                <div class="col-lg-12 paddin-0">
+                    <div class="alert">
+                        {% for group in app.session.get('questionGroups') %}
+                            {% if not group[0].book.title %}
+                                <b><h1>Results</h1></b>
+                            {% else %}
+                                <b><h1>{{ loop.index }}.{{ group[0].book.title }}</h1></b><br>
+                            {% endif %}
+                            {% for question in group %}
+                                {% if app.session.get('isCorrect')[question.id]  %}
+                                    {% set correct = correct + 1 %}
+                                    {% if question.id == current.id %}
+                                        <b><button class="mg-bot-10"><a title="{{ question.title }}"
+                                                                        class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
+                                    {% else %}
+                                        <button class="mg-bot-10"><a title="{{ question.title }}"
+                                                                     class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button>
+                                    {% endif %}
+                                {% else %}
+                                    {% if question.id == current.id %}
+                                        <b><button class="mg-bot-10"><a title="{{ question.title }}"
+                                                                        class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
+                                    {% else %}
+                                        <button class="mg-bot-10"><a title="{{ question.title }}"
+                                                                        class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}<br>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
             <div class="row alert">
                 <div class="col-lg-12">
                     <div class="">
