--- a/src/AppBundle/Resources/style/_alert.scss
+++ b/src/AppBundle/Resources/style/_alert.scss
@@ -1,8 +1,8 @@
 .alert {
-  padding: 8px 35px 8px 14px;
+  padding: 8px 8px 8px 8px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #EDD37E;
+  background-color: #FFFFFF;
   border: 1px solid #fbeed5;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
