--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -6,37 +6,42 @@
     <div id="headerwrap">
         <div class="container ">
             <div class="row">
-                <div class="col-lg-12">
-                    {% for group in app.session.get('questionGroups') %}
-                        {% if not group[0].book.title %}
-                            <b><h1>{{ 'Questions' }}</h1></b> <!--loop.index ~-->
-                        {% else %}
-                            <b>{{ loop.index }}.{{ group[0].book.title }}</b><br>
-                        {% endif %}
-
-                        {% for question in group %}
-                            {% if question.id == current.id %}
-                                <b><button title="{{ question.title }}"
-                                      class="dd66 color-background-text" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</button></b>
+                <div class="col-lg-12 paddin-0">
+                    <div class="alert">
+                        {% for group in app.session.get('questionGroups') %}
+                            <div class="dd66" id="countdown">
+                                <b>
+                                <p id="hours">00</p>
+                                <p id="minutes">00</p>
+                                <p id="seconds">00</p>
+                                </b>
+                            </div>
+                            {% if not group[0].book.title %}
+                                <b><h1>{{ 'Questions' }}</h1></b> <!--loop.index ~-->
                             {% else %}
-                                <a title="{{ question.title }}"
-                                   class="dd66 color-background-text" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a>
+                                <b>{{ loop.index }}.{{ group[0].book.title }}</b>
                             {% endif %}
-                        {% endfor %}<br>
-                    {% endfor %}
 
-                    <div class="dd66" id="countdown">
-                        <p id="hours">00</p>
-                        <p id="minutes">00</p>
-                        <p id="seconds">00</p>
+                            {% for question in group %}
+                                {% if question.id == current.id %}
+                                    <b><button class="mg-bot-10"><a title="{{ question.title }}"
+                                          class="dd66 color-background-text">{{ loop.index }}</a></button></b>
+                                {% else %}
+                                    <button class="mg-bot-10"><a title="{{ question.title }}"
+                                       class="dd66 color-background-text" href="{{ path('question', {'id': question.id }) }}">{{ loop.index }}</a></button>
+                                {% endif %}
+                            {% endfor %}<br>
+                        {% endfor %}
                     </div>
-                        {{ form_start(form, { 'attr' : {'class': 'grey-new'}}) }}
+                </div>
+                <div class="col-lg-12 paddin-0">
+                        {{ form_start(form, { 'attr' : {'class': 'alert'}}) }}
                         {{ index ~ '.' }}{{ current.content|
                         replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
                             "</pre>" : "</xmp></code></pre>" })|raw }}
 
                     {% for answer in form.answers %}
-                        <div class="agrey-new">
+                        <div class="alert">
                             {{ charArray[loop.index] }}{{ form_widget(answer) }}
                             {{ form_label(answer)|raw}}
                         </div>
@@ -51,7 +56,7 @@
                     </div>
                 </div>
             </div>
-                <div class="row grey-new">
+                <div class="row alert">
                     <div class="col-lg-12">
                          <div id="explanation"></div>
                          <hr>
