--- a/src/AppBundle/Resources/style/_formLayout.scss
+++ b/src/AppBundle/Resources/style/_formLayout.scss
@@ -34,7 +34,8 @@
 #contact {
   background: #F9F9F9;
   padding: 25px;
-  margin: 150px 0;
+  margin-top: 125px;
+  margin-bottom: 25px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
