--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -48,7 +48,7 @@
                     {% endfor %}
 
                     <div class="">
-                        {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }} &nbsp;
+                        {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }}
                         {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
                         {{ form_widget(form.submit, {'attr': {'class': 'btn btn-danger'}}) }} <br>
                         {{ form_end(form) }}
