headerio bck cl

--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -18,7 +18,7 @@
                     <li><a href="{{ path('quick_test') }}">Quick test</a></li>
                     {%  if app.user %}
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category tests <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category tests <span class="caret"></span></a>
                             <ul class="dropdown-menu position-topmost">
                                 <li><a href="/category-test/1-php-basics">PHP Basics</a></li>
                                 <li><a href="/category-test/2-functions-and-arrays">Functions and Arrays</a></li>
@@ -36,7 +36,7 @@
                     {%  if app.user %}
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }}<span class="caret"></span>, <img src="{{ app.user.avatar }}" height="30">
+                                <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }}<span class="caret"></span>, <img src="{{ app.user.avatar }}" height="30">
                                 </a>
 
                                 <ul class="dropdown-menu position-topmost">
