--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -15,7 +15,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('quick_test') }}">Quick test</a></li>
+                    <li><a class="dropdown-2" href="{{ path('quick_test') }}">Quick test</a></li>
                     {%  if app.user %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category tests <span class="caret"></span></a>
@@ -36,7 +36,7 @@
                     {%  if app.user %}
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }}<span class="caret"></span>, <img src="{{ app.user.avatar }}" height="30">
+                                <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }}<span class="caret"></span> <img class="img-circle" src="{{ app.user.avatar }}" style="height: 40px; width: 40px">
                                 </a>
 
                                 <ul class="dropdown-menu position-topmost">
