--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -318,5 +318,25 @@ label{
 
 .dropdown-2:focus, .dropdown-2:hover, .navbar-nav > li > a:hover, .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
   background-color: transparent !important;
+  color: #353939 !important;
 }
 
+.dropdown-2:focus, .dropdown-2:hover, .navbar-nav > li > a:hover, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  font-weight: 700;
+}
+
+.dropdown-2 {
+  font-weight: 700;
+}
+
+.bold500 {
+  font-weight: 500;
+}
+
+.bold600 {
+  font-weight: 600;
+}
+
+.crlgr {
+  color: #353939;
+}
