--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="row mt">
                     <div class="col-lg-6">
-                        <h1>Learn PHP<br />Without any difficulties.</h1>
+                        <h1 class="crlgr bold500">Learn PHP<br />Without any difficulties.</h1>
                         <h3>Keep up with with with friends and latest features of PHP.</h3>
                     </div>
                     <!-- /col-lg-6 -->
@@ -33,22 +33,17 @@
             <div class="row mt centered">
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser01.png') }}" width="180" alt="">
-                    <h4>1 - Browser Compatibility</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser02.png') }}" width="180" alt="">
-                    <h4>2 - Email Campaigns</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser03.png') }}" width="180" alt="">
-                    <h4>3 - Documentation</h4>
-                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="http://php.net/docs.php">PHP documentation</a></h2>
-                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="https://www.digitalocean.com/company/blog/getting-ready-for-php-7/">Getting Ready for PHP 7</a></h2>
-                </div>
+                    <p class="white-text bold500">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>                </div>
                 <!--/col-lg-4 -->
             </div>
             <!-- /row -->
