--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="row mt">
                     <div class="col-lg-6">
                         <h1 class="crlgr bold500">Learn PHP<br />Without any difficulties.</h1>
-                        <h3>Keep up with with with friends and latest features of PHP.</h3>
+                        <h3>Keep up with <span class="yellow">{</span> with with <span class="yellow">}</span> friends and latest features of PHP.</h3>
                     </div>
                     <!-- /col-lg-6 -->
                     <div class="col-lg-6">
