--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -18,17 +18,17 @@
                                 {% if app.session.get('isCorrect')[question.id]  %}
                                     {% set correct = correct + 1 %}
                                     {% if question.id == current.id %}
-                                        <b><button class="mg-bot-10"><a title="{{ question.title }}"
+                                        <b><button class="mg-bot-10 curvy"><a title="{{ question.title }}"
                                                                         class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
                                     {% else %}
-                                        <a title="{{ question.title }}" class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button>{{ loop.index }}</button></a>
+                                        <a title="{{ question.title }}" class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a>
                                     {% endif %}
                                 {% else %}
                                     {% if question.id == current.id %}
-                                        <b><button class="mg-bot-10"><a title="{{ question.title }}"
+                                        <b><button class="mg-bot-10 curvy"><a title="{{ question.title }}"
                                                                         class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
                                     {% else %}
-                                        <a title="{{ question.title }}" class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button>{{ loop.index }}</button></a>
+                                        <a title="{{ question.title }}" class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a>
                                     {% endif %}
                                 {% endif %}
                             {% endfor %}<br>
@@ -138,7 +138,7 @@
                     {{ render(controller('AppBundle:Test:questionReport', {'allow' : true})) }}
                 {% else %}
                     <div class="modal-body">
-                        <h3>Only registered users can use this!</h3>
+                        <h3 class="black-text">Only registered users can use this!</h3>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
